--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,11 +30,44 @@
                 <button type="button" class="btn btn-danger" id="btn-logout">Logout</button>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>ChipID</th>
+                            <th>Name</th>
+                            <th>Typ</th>
+                            <th>Rasse</th>
+                            <th>Geburtsdatum</th>
+                            <th>Besitzer</th>
+                        </tr>
+                    </thead>
+                    <tbody id="pet-tbl">
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </main>
+
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="liveToast">
+        <div class="toast-header">
+            <img src="..." class="rounded me-2" alt="...">
+            <strong class="me-auto">Spring Daten</strong>
+            <small class="text-muted">just now</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+            Du bist nicht angemeldet!
+        </div>
+    </div>
 
     <script src="/webjars/bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
     <script src="/webjars/jquery/3.6.3/jquery.min.js"></script>
     <script>
+        const toastLiveExample = document.getElementById('liveToast')
+
         $(document).ready(() => { // Warte bis das ganze HTML geladen wurde
 
             $('#btn-data').click(() => { // Click-Event-Listener
@@ -50,10 +83,16 @@
                         }
                     },
                     success: (resp) => {
-                        console.log(resp);
+                        let tbl = $("#pet-tbl");
+                        let output = '';
+                        $.each(resp, (i, pet) => {
+                            output += '<tr><td>' + pet.chipId + '</td><td>' + pet.name + '</td><td>' + pet.type + '</td><td>' + pet.race + '</td><td>' + pet.birthDate + '</td><td>' + pet.owner.firstname + " " + pet.owner.lastname + '</td></tr>';
+                        });
+                        tbl.html(output);
                     },
                     error: () => {
-                        console.log('Error');
+                        const toast = new bootstrap.Toast(toastLiveExample)
+                        toast.show()
                     }
                 });
             });
@@ -73,10 +112,10 @@
                     data: JSON.stringify({"email": $('#email').val(), "password": $('#password').val()}), // Verpackt die Werte aus dem Formular in JSON
                     success: (resp) => { // resp ist das Response für die Anfrage
                         localStorage.setItem('token', resp.token); // liest den Token aus JSON raus und scheibt ihn in LocalStorage
-                        console.log('Angemeldet');
                     },
                     error: () => {
-                        console.log('Error');
+                        const toast = new bootstrap.Toast(toastLiveExample)
+                        toast.show()
                     }
                 });
             });
